--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 	
 	<repositories>
 		<repository>
-			<id>github</id>
-			<name>GitHub Packages</name>
+			<id>github pegasus core</id>
+			<name>github pegasus core</name>
 			<url>https://maven.pkg.github.com/garganttua/pegasus-core</url>
 			<snapshots>
 				<enabled>true</enabled>
@@ -97,17 +97,8 @@
 				<artifactId>maven-plugin-plugin</artifactId>
 				<version>3.6.4</version>
 				<configuration>
-					<!-- see http://jira.codehaus.org/browse/MNG-5346 -->
 					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 				</configuration>
-				<!--				<executions>-->
-				<!--					<execution>-->
-				<!--						<id>help-goal</id>-->
-				<!--						<goals>-->
-				<!--							<goal>helpmojo</goal>-->
-				<!--						</goals>-->
-				<!--					</execution>-->
-				<!--				</executions>-->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
