--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.gtech</groupId>
+	<groupId>com.garganttua</groupId>
 	<version>1.0.0-SNAPSHOT</version>
-	<artifactId>pegasus-server-distribution-maker</artifactId>
+	<artifactId>garganttua-server-distribution-maker</artifactId>
 	<packaging>maven-plugin</packaging>
-	
+
+
 	<licenses>
 		<license>
 			<name>The Apache License, Version 2.0</name>
@@ -20,25 +21,25 @@
 			<email>jeremy.colombet@garganttua.com</email>
 		</developer>
 	</developers>
-	
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/garganttua/pegasus-server-distribution-maker</url>
+			<url>https://maven.pkg.github.com/garganttua/garganttua-server-distribution-maker</url>
 		</snapshotRepository>
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/garganttua/pegasus-server-distribution-maker</url>
+			<url>https://maven.pkg.github.com/garganttua/garganttua-server-distribution-maker</url>
 		</repository>
 	</distributionManagement>
-	
+
 	<repositories>
 		<repository>
-			<id>github pegasus core</id>
-			<name>github pegasus core</name>
-			<url>https://maven.pkg.github.com/garganttua/pegasus-core</url>
+			<id>github garganttua core</id>
+			<name>github garganttua core</name>
+			<url>https://maven.pkg.github.com/garganttua/garganttua-core</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -47,9 +48,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.gtech</groupId>
+			<groupId>com.garganttua</groupId>
+			<artifactId>garganttua-server-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
-			<artifactId>pegasus-core</artifactId>
 		</dependency>
 
 		<dependency>
