maven build and deploy infos

--- a/pom.xml
+++ b/pom.xml
@@ -24,21 +24,21 @@
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>github</id>
-			<name>GitHub Packages</name>
+			<id>github garganttua server distribution maker</id>
+			<name>github garganttua server distribution maker</name>
 			<url>https://maven.pkg.github.com/garganttua/garganttua-server-distribution-maker</url>
 		</snapshotRepository>
 		<repository>
-			<id>github</id>
-			<name>GitHub Packages</name>
+			<id>github garganttua server distribution maker</id>
+			<name>github garganttua server distribution maker</name>
 			<url>https://maven.pkg.github.com/garganttua/garganttua-server-distribution-maker</url>
 		</repository>
 	</distributionManagement>
 
 	<repositories>
 		<repository>
-			<id>github garganttua core</id>
-			<name>github garganttua core</name>
+			<id>github garganttua server core</id>
+			<name>github garganttua server core</name>
 			<url>https://maven.pkg.github.com/garganttua/garganttua-core</url>
 			<snapshots>
 				<enabled>true</enabled>
