--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,11 +23,10 @@ jobs:
         distribution: 'temurin'
         server-id: github garganttua server distribution maker
         settings-path: ${{ github.workspace }} # location for the settings.xml file
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
