--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'temurin'
         server-id: github garganttua server distribution maker
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
