--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
+        server-id: github garganttua server distribution maker
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
